--- a/storm/example-storm-topology/pom.xml
+++ b/storm/example-storm-topology/pom.xml
@@ -52,6 +52,12 @@
         </exclusion>
       </exclusions>-->
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.9</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -100,7 +106,15 @@
           <includeProjectDependencies>true</includeProjectDependencies>
           <includePluginDependencies>false</includePluginDependencies>
           <classpathScope>compile</classpathScope>
-          <mainClass>com.biggis.storm.WordCountTopology</mainClass>
+          <mainClass>io.github.cleitonmonteiro.MainTopology</mainClass>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>6</source>
+          <target>6</target>
         </configuration>
       </plugin>
     </plugins>
